--- a/src/main/webapp/pages/profissional/profissional-incluir.xhtml
+++ b/src/main/webapp/pages/profissional/profissional-incluir.xhtml
@@ -74,7 +74,7 @@
                 <p:calendar id="inicio" value="#{profissionalManager.profissional.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/>
                 <br/><br/>
                 <p:commandButton value="#{message['button.salvar']}" action="#{profissionalManager.save()}" update="growl" />
-                <p:button value="#{message['button.cancelar']}" outcome="pretty:cargaHoraria"/>
+                <p:button value="#{message['button.cancelar']}" outcome="pretty:profissional"/>
             </p:panel>
 		</h:form>
     </ui:define>
