--- a/src/main/webapp/pages/cargaHoraria/cargaHoraria-listar.xhtml
+++ b/src/main/webapp/pages/cargaHoraria/cargaHoraria-listar.xhtml
@@ -7,6 +7,10 @@
 	xmlns:pretty="http://ocpsoft.com/prettyfaces">
 
 	<ui:define name="content">
+		<p:breadCrumb>
+		    <p:menuitem value="Home" url="#" />
+		    <p:menuitem value="Carga Horaria" url="pretty:cargaHoraria-listar"/>
+		</p:breadCrumb>
 		<h2>#{message['title.cargaHoraria']}</h2>
 		<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
 		<h:form>
