Gabriel - ajustado mensagem de listar equipes

--- a/src/main/webapp/pages/equipe/equipe-listar.xhtml
+++ b/src/main/webapp/pages/equipe/equipe-listar.xhtml
@@ -12,7 +12,7 @@
 		<h:form>
 			<p:dataTable id="gridEquipes" var="equipe"
 				value="#{equipeManager.listarAtivos()}"
-				emptyMessage="{message['alerta.listaVazia']}">
+				emptyMessage="#{message['alerta.listaVazia']}">
 				<p:column width="200" headerText="#{message['label.nome']}">
 					<h:outputText value="#{equipe.nome}" />
 				</p:column>
