--- a/src/main/webapp/pages/perfilStefanini/perfilStefanini-incluir.xhtml
+++ b/src/main/webapp/pages/perfilStefanini/perfilStefanini-incluir.xhtml
@@ -4,7 +4,7 @@
     xmlns:pretty="http://ocpsoft.com/prettyfaces">
 
     <ui:define name="content">
-    	<h2>#{message['title.perfilStefanini.cadastro']}</h2>
+    	<h2>#{message['title.perfilStefanini']}</h2>
         <h:form>
         	<p:growl id="growl" life="4000" />
 			<p:panel header="#{message['title.perfilStefanini']}" id="painel">			
