--- a/src/main/webapp/pages/cargaHoraria/cargaHoraria-editar.xhtml
+++ b/src/main/webapp/pages/cargaHoraria/cargaHoraria-editar.xhtml
@@ -4,6 +4,11 @@
     xmlns:pretty="http://ocpsoft.com/prettyfaces">
 
     <ui:define name="content">
+    <p:breadCrumb>
+		    <p:menuitem value="Home" url="#" />
+		    <p:menuitem value="Carga Horaria" outcome="pretty:cargaHoraria"/>
+		    <p:menuitem value="Carga Horaria Incluir" outcome="pretty:cargaHoraria-editar"/>
+		</p:breadCrumb>
     	<h2>#{message['title.cargaHoraria']}</h2>
         <h:form>
         	<p:growl id="growl" life="4000" />
