--- a/src/main/webapp/pages/cargaHoraria/cargaHoraria-listar.xhtml
+++ b/src/main/webapp/pages/cargaHoraria/cargaHoraria-listar.xhtml
@@ -9,7 +9,7 @@
 	<ui:define name="content">
 		<p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
-		    <p:menuitem value="Carga Horaria" url="pretty:cargaHoraria-listar"/>
+		    <p:menuitem value="Carga Horaria" outcome="pretty:cargaHoraria"/>
 		</p:breadCrumb>
 		<h2>#{message['title.cargaHoraria']}</h2>
 		<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
