--- a/src/main/webapp/pages/status/status-editar.xhtml
+++ b/src/main/webapp/pages/status/status-editar.xhtml
@@ -4,6 +4,11 @@
     xmlns:pretty="http://ocpsoft.com/prettyfaces">
 
     <ui:define name="content">
+    	<p:breadCrumb>
+		    <p:menuitem value="Home" url="#" />
+		    <p:menuitem value="Status" outcome="pretty:status"/>
+		    <p:menuitem value="Statur Editar" outcome="pretty:status-editar"/>
+		</p:breadCrumb>
     	<h2>#{message['title.status']}</h2>
         <h:form>
         	<p:growl id="growl" life="4000" />
