--- a/src/main/webapp/pages/status/status-listar.xhtml
+++ b/src/main/webapp/pages/status/status-listar.xhtml
@@ -7,6 +7,10 @@
 	xmlns:pretty="http://ocpsoft.com/prettyfaces">
 
 	<ui:define name="content">
+	<p:breadCrumb>
+		    <p:menuitem value="Home" url="#" />
+		    <p:menuitem value="Status" outcome="pretty:status"/>
+		</p:breadCrumb>
 		<h2>#{message['title.status']}</h2>
 		<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
 		<h:form>
