Caminho de pão ok

--- a/src/main/webapp/pages/cargaHoraria/cargaHoraria-editar.xhtml
+++ b/src/main/webapp/pages/cargaHoraria/cargaHoraria-editar.xhtml
@@ -7,7 +7,7 @@
     <p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
 		    <p:menuitem value="Carga Horaria" outcome="pretty:cargaHoraria"/>
-		    <p:menuitem value="Carga Horaria Incluir" outcome="pretty:cargaHoraria-editar"/>
+		    <p:menuitem value="Carga Horaria Editar" outcome="pretty:cargaHoraria-editar" disabled="true"/>
 		</p:breadCrumb>
     	<h2>#{message['title.cargaHoraria']}</h2>
         <h:form>
