--- a/src/main/webapp/pages/cargaHoraria/cargaHoraria-incluir.xhtml
+++ b/src/main/webapp/pages/cargaHoraria/cargaHoraria-incluir.xhtml
@@ -6,8 +6,8 @@
     <ui:define name="content">
     	<p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
-		    <p:menuitem value="Carga Horaria" url="pretty:cargaHoraria"/>
-		    <p:menuitem value="Carga Horaria Incluir" url="pretty:cargaHoraria-incluir"/>
+		    <p:menuitem value="Carga Horaria" outcome="pretty:cargaHoraria"/>
+		    <p:menuitem value="Carga Horaria Incluir" outcome="pretty:cargaHoraria-incluir" disabled="true"/>
 		</p:breadCrumb>
     	<h2>#{message['title.cargaHoraria']}</h2>
         <h:form>
