--- a/src/main/webapp/pages/cargo/cargo-editar.xhtml
+++ b/src/main/webapp/pages/cargo/cargo-editar.xhtml
@@ -7,7 +7,7 @@
     	<p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
 		    <p:menuitem value="Cargo" outcome="pretty:cargaHoraria"/>
-		    <p:menuitem value="Cargo Editar" outcome="pretty:cargo-editar"/>
+		    <p:menuitem value="Cargo Editar" outcome="pretty:cargo-editar" disabled="true"/>
 		</p:breadCrumb>
     	<h2>#{message['title.cargos']}</h2>
         <h:form>
