--- a/src/main/webapp/pages/cargo/cargo-incluir.xhtml
+++ b/src/main/webapp/pages/cargo/cargo-incluir.xhtml
@@ -7,7 +7,7 @@
    		<p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
 		    <p:menuitem value="Cargo" outcome="pretty:cargaHoraria"/>
-		    <p:menuitem value="Cargo Incluir" outcome="pretty:cargo-incluir"/>
+		    <p:menuitem value="Cargo Incluir" outcome="pretty:cargo-incluir" disabled="true"/>
 		</p:breadCrumb>
     	<h2>#{message['title.cargos']}</h2>
         <h:form>
