--- a/src/main/webapp/pages/cargo/cargo-listar.xhtml
+++ b/src/main/webapp/pages/cargo/cargo-listar.xhtml
@@ -9,7 +9,7 @@
 	<ui:define name="content">
 		<p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
-		    <p:menuitem value="Cargo" outcome="pretty:cargo"/>
+		    <p:menuitem value="Cargo" outcome="pretty:cargo"  disabled="true"/>
 		</p:breadCrumb>
 		<h2>#{message['title.cargos']}</h2>
 		<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
