--- a/src/main/webapp/pages/celula/celula-editar.xhtml
+++ b/src/main/webapp/pages/celula/celula-editar.xhtml
@@ -7,7 +7,7 @@
     	<p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
 		    <p:menuitem value="Célula" outcome="pretty:celula"/>
-		    <p:menuitem value="Célula Editar" outcome="pretty:celula-editar"/>
+		    <p:menuitem value="Célula Editar" outcome="pretty:celula-editar" disabled="true"/>
 		</p:breadCrumb>
     	<h2>#{message['title.celulas']}</h2>
         <h:form>
