--- a/src/main/webapp/pages/celula/celula-incluir.xhtml
+++ b/src/main/webapp/pages/celula/celula-incluir.xhtml
@@ -7,7 +7,7 @@
     	<p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
 		    <p:menuitem value="Célula" outcome="pretty:celula"/>
-		    <p:menuitem value="Célula Incluir" outcome="pretty:celula-incluir"/>
+		    <p:menuitem value="Célula Incluir" outcome="pretty:celula-incluir" disabled="true"/>
 		</p:breadCrumb>
     	<h2>#{message['title.celulas']}</h2>
         <h:form>
