--- a/src/main/webapp/pages/celula/celula-listar.xhtml
+++ b/src/main/webapp/pages/celula/celula-listar.xhtml
@@ -9,7 +9,7 @@
 	<ui:define name="content">
 		<p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
-		    <p:menuitem value="Célula" outcome="pretty:celula"/>
+		    <p:menuitem value="Célula" outcome="pretty:celula" disabled="true"/>
 		</p:breadCrumb>		
 		<h2>#{message['title.celulas']}</h2>
 		<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
