--- a/src/main/webapp/pages/equipe/equipe-incluir.xhtml
+++ b/src/main/webapp/pages/equipe/equipe-incluir.xhtml
@@ -7,7 +7,7 @@
     	<p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
 		    <p:menuitem value="Equipe" outcome="pretty:equipe"/>
-		    <p:menuitem value="Equipe Incluir" outcome="pretty:equipe-incluir"/>
+		    <p:menuitem value="Equipe Incluir" outcome="pretty:equipe-incluir" disabled="true"/>
 		</p:breadCrumb>
     	<h2>#{message['title.equipes']}</h2>
     	<h:form>
