--- a/src/main/webapp/pages/equipe/equipe-listar.xhtml
+++ b/src/main/webapp/pages/equipe/equipe-listar.xhtml
@@ -9,7 +9,7 @@
 	<ui:define name="content">
     	<p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
-		    <p:menuitem value="Equipe" outcome="pretty:equipe"/>
+		    <p:menuitem value="Equipe" outcome="pretty:equipe" disabled="true"/>
 		</p:breadCrumb>
 		<h2>#{message['title.equipes']}</h2>
 		<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
