--- a/src/main/webapp/pages/formaContratacao/formaContratacao-editar.xhtml
+++ b/src/main/webapp/pages/formaContratacao/formaContratacao-editar.xhtml
@@ -7,7 +7,7 @@
     	<p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
 		    <p:menuitem value="Forma de Contratação" outcome="pretty:formaContratacao"/>
-		    <p:menuitem value="Forma de Contratação Editar" outcome="pretty:formaContratacao-editar"/>
+		    <p:menuitem value="Forma de Contratação Editar" outcome="pretty:formaContratacao-editar" disabled="true"/>
 		</p:breadCrumb>
     	<h2>#{message['title.formaContratacao']}</h2>
         <h:form>
