--- a/src/main/webapp/pages/formaContratacao/formaContratacao-listar.xhtml
+++ b/src/main/webapp/pages/formaContratacao/formaContratacao-listar.xhtml
@@ -9,7 +9,7 @@
 	<ui:define name="content">
        	<p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
-		    <p:menuitem value="Forma de Contratação" outcome="pretty:formaContratacao"/>
+		    <p:menuitem value="Forma de Contratação" outcome="pretty:formaContratacao" disabled="true"/>
 		</p:breadCrumb>
 		<h2>#{message['title.formaContratacao']}</h2>
 		<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
