--- a/src/main/webapp/pages/perfil/perfil-incluir.xhtml
+++ b/src/main/webapp/pages/perfil/perfil-incluir.xhtml
@@ -7,7 +7,7 @@
     	<p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
 		    <p:menuitem value="Perfil" outcome="pretty:perfil"/>
-		    <p:menuitem value="Perfil Incluir" outcome="pretty:perfil-incluir"/>
+		    <p:menuitem value="Perfil Incluir" outcome="pretty:perfil-incluir" disabled="true"/>
 		</p:breadCrumb>
     	<h2>#{message['title.perfis']}</h2>
     	<h:form>
