--- a/src/main/webapp/pages/perfil/perfil-listar.xhtml
+++ b/src/main/webapp/pages/perfil/perfil-listar.xhtml
@@ -9,7 +9,7 @@
 	<ui:define name="content">
 	<p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
-		    <p:menuitem value="Perfil" outcome="pretty:perfil"/>
+		    <p:menuitem value="Perfil" outcome="pretty:perfil" disabled="true"/>
 		</p:breadCrumb>
 		<h2>#{message['title.perfis']}</h2>
 		<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
