--- a/src/main/webapp/pages/perfilStefanini/perfilStefanini-incluir.xhtml
+++ b/src/main/webapp/pages/perfilStefanini/perfilStefanini-incluir.xhtml
@@ -7,7 +7,7 @@
     	<p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
 		    <p:menuitem value="Perfil Stefanini" outcome="pretty:perfilStefanini"/>
-		    <p:menuitem value="Perfil Stefanini Incluir" outcome="pretty:perfilStefanini-incluir"/>
+		    <p:menuitem value="Perfil Stefanini Incluir" outcome="pretty:perfilStefanini-incluir" disabled="true"/>
 		</p:breadCrumb>
     	<h2>#{message['title.perfilStefanini']}</h2>
         <h:form>
