--- a/src/main/webapp/pages/profissional/profissional-editar.xhtml
+++ b/src/main/webapp/pages/profissional/profissional-editar.xhtml
@@ -7,7 +7,7 @@
     	<p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
 		    <p:menuitem value="Profissional" outcome="pretty:profissional"/>
-		    <p:menuitem value="Profissional Editar" outcome="pretty:profissional-editar"/>
+		    <p:menuitem value="Profissional Editar" outcome="pretty:profissional-editar" disabled="true"/>
 		</p:breadCrumb>
     	<h2>#{message['title.profissional']}</h2>
         <h:form>
