--- a/src/main/webapp/pages/profissional/profissional-listar.xhtml
+++ b/src/main/webapp/pages/profissional/profissional-listar.xhtml
@@ -9,7 +9,7 @@
 	<ui:define name="content">
 		<p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
-		    <p:menuitem value="Profissional" outcome="pretty:profissional"/>
+		    <p:menuitem value="Profissional" outcome="pretty:profissional" disabled="true"/>
 		</p:breadCrumb>
 		<h2>#{message['title.profissional']}</h2>
 		<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
