--- a/src/main/webapp/pages/status/status-editar.xhtml
+++ b/src/main/webapp/pages/status/status-editar.xhtml
@@ -7,7 +7,7 @@
     	<p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
 		    <p:menuitem value="Status" outcome="pretty:status"/>
-		    <p:menuitem value="Statur Editar" outcome="pretty:status-editar"/>
+		    <p:menuitem value="Statur Editar" outcome="pretty:status-editar" disabled="true"/>
 		</p:breadCrumb>
     	<h2>#{message['title.status']}</h2>
         <h:form>
