--- a/src/main/webapp/pages/status/status-incluir.xhtml
+++ b/src/main/webapp/pages/status/status-incluir.xhtml
@@ -7,7 +7,7 @@
     	<p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
 		    <p:menuitem value="Status" outcome="pretty:status"/>
-		    <p:menuitem value="Status Incluir" outcome="pretty:status-incluir"/>
+		    <p:menuitem value="Status Incluir" outcome="pretty:status-incluir" disabled="true"/>
 		</p:breadCrumb>
     	<h2>#{message['title.status']}</h2>
         <h:form>
