--- a/src/main/webapp/pages/status/status-listar.xhtml
+++ b/src/main/webapp/pages/status/status-listar.xhtml
@@ -9,7 +9,7 @@
 	<ui:define name="content">
 	<p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
-		    <p:menuitem value="Status" outcome="pretty:status"/>
+		    <p:menuitem value="Status" outcome="pretty:status" disabled="true"/>
 		</p:breadCrumb>
 		<h2>#{message['title.status']}</h2>
 		<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
