--- a/src/main/webapp/pages/profissional/profissional-editar.xhtml
+++ b/src/main/webapp/pages/profissional/profissional-editar.xhtml
@@ -76,7 +76,7 @@
                 </p:selectOneMenu>
                 <br /><br />
                 <p:outputLabel for="inicio" value="#{message['label.data.inicio']}" styleClass="label"/>
-                <p:calendar id="inicio" value="#{profissionalManager.profissional.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/>
+                <p:calendar id="inicio" value="#{profissionalManager.profissional.dataManipulacao}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/>
                 <br/><br/>
                 <p:commandButton value="#{message['button.salvar']}" action="#{profissionalManager.update()}" update="growl" />
                 <p:button value="#{message['button.cancelar']}" outcome="pretty:profissional"/>
