--- a/src/main/webapp/pages/celula/celula-listar.xhtml
+++ b/src/main/webapp/pages/celula/celula-listar.xhtml
@@ -16,11 +16,11 @@
 		<h:form>
 			<p:dataTable id="gridCelula" var="celula" value="#{celulaManager.listarAtivos()}" emptyMessage="#{message['alerta.listaVazia']}" >
 				
-				<p:column width="200" headerText="#{message['label.nome']}">
+				<p:column headerText="#{message['label.nome']}">
 					<h:outputText value="#{celula.nome}" />
 				</p:column>
 				
-				<p:column width="200" headerText="#{message['label.data.inicio']}">
+				<p:column headerText="#{message['label.data.inicio']}">
 					<h:outputText value="#{celula.registroValidadeInicio}">
 						<f:convertDateTime pattern="dd/MM/yyyy" locale="pt,BR"/>
 					</h:outputText>					
