--- a/src/main/webapp/pages/formaContratacao/formaContratacao-listar.xhtml
+++ b/src/main/webapp/pages/formaContratacao/formaContratacao-listar.xhtml
@@ -16,11 +16,11 @@
 		<h:form>
 			<p:dataTable id="gridFormaContratacao" var="formaContratacao" value="#{formaContratacaoManager.listarAtivos()}" emptyMessage="#{message['alerta.listaVazia']}" >
 				
-				<p:column width="200" headerText="#{message['label.nome']}">
+				<p:column headerText="#{message['label.nome']}">
 					<h:outputText value="#{formaContratacao.nome}" />
 				</p:column>
 				
-				<p:column width="200" headerText="#{message['label.data.inicio']}">
+				<p:column headerText="#{message['label.data.inicio']}">
 					<h:outputText value="#{formaContratacao.registroValidadeInicio}">
 						<f:convertDateTime pattern="dd/MM/yyyy" locale="pt,BR"/>
 					</h:outputText>					
