--- a/src/main/webapp/pages/celula/celula-listar.xhtml
+++ b/src/main/webapp/pages/celula/celula-listar.xhtml
@@ -29,9 +29,9 @@
 				<p:column headerText="#{message['label.acoes']}" styleClass="txtCenter">
 					<pretty:link mappingId="celula-editar">
 						<f:param value="#{celula.id}" />
-						<p:commandButton type="button" value="#{message['button.editar']}" />
+						<p:commandButton styleClass="btn-acao" type="button" value="#{message['button.editar']}" />
 					</pretty:link>
-					<p:commandButton value="#{message['button.desativar']}" action="#{celulaManager.desativar(celula.id)}" update="gridCelula">
+					<p:commandButton styleClass="btn-acao" value="#{message['button.desativar']}" action="#{celulaManager.desativar(celula.id)}" update="gridCelula">
 						<p:confirm header="Desativar Celula" message="Deseja mesmo Desativar?" icon="ui-icon-alert" />	
 					</p:commandButton>
 				</p:column>
