--- a/src/main/webapp/pages/cargo/cargo-listar.xhtml
+++ b/src/main/webapp/pages/cargo/cargo-listar.xhtml
@@ -29,9 +29,9 @@
 				<p:column headerText="#{message['label.acoes']}" styleClass="txtCenter">
 					<pretty:link mappingId="cargo-editar">
 						<f:param value="#{cargo.id}" />
-						<p:commandButton type="button" value="#{message['button.editar']}" />
+						<p:commandButton styleClass="btn-acao" type="button" value="#{message['button.editar']}" />
 					</pretty:link>
-					<p:commandButton value="#{message['button.desativar']}" action="#{cargoManager.desativar(cargo.id)}" update="gridCargos">
+					<p:commandButton styleClass="btn-acao" value="#{message['button.desativar']}" action="#{cargoManager.desativar(cargo.id)}" update="gridCargos">
 						<p:confirm header="Desativar Cargo" message="Deseja mesmo Desativar?" icon="ui-icon-alert" />	
 					</p:commandButton>
 				</p:column>
