--- a/src/main/webapp/pages/formaContratacao/formaContratacao-listar.xhtml
+++ b/src/main/webapp/pages/formaContratacao/formaContratacao-listar.xhtml
@@ -29,9 +29,9 @@
 				<p:column headerText="#{message['label.acoes']}" styleClass="txtCenter">
 					<pretty:link mappingId="formaContratacao-editar">
 						<f:param value="#{formaContratacao.id}" />
-						<p:commandButton type="button" value="#{message['button.editar']}" />
+						<p:commandButton styleClass="btn-acao" type="button" value="#{message['button.editar']}" />
 					</pretty:link>
-					<p:commandButton value="#{message['button.desativar']}" action="#{formaContratacaoManager.desativar(formaContratacao.id)}" update="gridFormaContratacao">
+					<p:commandButton styleClass="btn-acao" value="#{message['button.desativar']}" action="#{formaContratacaoManager.desativar(formaContratacao.id)}" update="gridFormaContratacao">
 						<p:confirm header="Desativar Forma de Contratação" message="Deseja mesmo Desativar?" icon="ui-icon-alert" />	
 					</p:commandButton>
 				</p:column>
