--- a/src/main/webapp/pages/profissional/profissional-listar.xhtml
+++ b/src/main/webapp/pages/profissional/profissional-listar.xhtml
@@ -43,7 +43,7 @@
 				<p:column headerText="#{message['label.profissional.equipe']}">
 					<h:outputText value="#{profissional.equipe.nome}"/>			
 				</p:column>
-				<p:column headerText="#{message['label.profissional.cargo']}">
+				<p:column width="80" headerText="#{message['label.profissional.cargo']}">
 					<h:outputText value="#{profissional.cargo.nome}"/>			
 				</p:column>
 				<p:column  headerText="#{message['label.profissional.perfil']}">
@@ -55,7 +55,7 @@
 				<p:column headerText="#{message['label.profissional.formaContratacao']}">
 					<h:outputText value="#{profissional.formaContratacao.nome}"/>			
 				</p:column>
-				<p:column headerText="#{message['label.profissional.status']}">
+				<p:column width="40" headerText="#{message['label.profissional.status']}">
 					<h:outputText value="#{profissional.status.nome}"/>			
 				</p:column>
 				
