--- a/src/main/webapp/pages/equipe/equipe-listar.xhtml
+++ b/src/main/webapp/pages/equipe/equipe-listar.xhtml
@@ -11,40 +11,42 @@
 		    <p:menuitem value="Home" url="#" />
 		    <p:menuitem value="Equipe" outcome="pretty:equipe" disabled="true"/>
 		</p:breadCrumb>
-		<h2>#{message['title.equipes']}</h2>
-		<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
-		<h:form>
-			<p:dataTable id="gridEquipes" var="equipe"
-				value="#{equipeManager.listarAtivos()}"
-				emptyMessage="#{message['alerta.listaVazia']}">
-				<p:column headerText="#{message['label.nome']}">
-					<h:outputText value="#{equipe.nome}" />
-				</p:column>
-				<p:column headerText="#{message['label.data.inicio']}">
-					<h:outputText value="#{equipe.registroValidadeInicio}" >
-					<f:convertDateTime pattern="dd/MM/yyyy" locale="pt,BR"/>
-					</h:outputText>
-				</p:column>
-				<p:column headerText="#{message['label.acoes']}" styleClass="txtCenter">
-					<pretty:link mappingId="equipe-editar">
-						<f:param value="#{equipe.id}" />
-						<p:commandButton styleClass="btn-acao" type="button" value="#{message['button.editar']}" />
-					</pretty:link>
-					<p:commandButton styleClass="btn-acao" value="#{message['button.desativar']}"	action="#{equipeManager.desativar(equipe.id)}" update="gridEquipes">
-						<p:confirm header="Desativar Cargo"
-							message="Desaja mesmo Desativar?" icon="ui-icon-alert" />
-					</p:commandButton>
-				</p:column>
-			</p:dataTable>
-			<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
-				<p:commandButton value="Sim" type="button"
-					styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
-				<p:commandButton value="Não" type="button"
-					styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
-			</p:confirmDialog>
-			<br />
-			<p:button value="#{message['button.novo']}"
-				outcome="pretty:equipe-incluir" />
-		</h:form>
+		<div class="panel-formulario">
+			<h2>#{message['title.equipes']}</h2>
+			<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
+			<h:form>
+				<p:dataTable id="gridEquipes" var="equipe"
+					value="#{equipeManager.listarAtivos()}"
+					emptyMessage="#{message['alerta.listaVazia']}">
+					<p:column headerText="#{message['label.nome']}">
+						<h:outputText value="#{equipe.nome}" />
+					</p:column>
+					<!--  <p:column headerText="#{message['label.data.inicio']}">
+						<h:outputText value="#{equipe.registroValidadeInicio}" >
+						<f:convertDateTime pattern="dd/MM/yyyy" locale="pt,BR"/>
+						</h:outputText>
+					</p:column>-->
+					<p:column headerText="#{message['label.acoes']}" styleClass="txtCenter">
+						<pretty:link mappingId="equipe-editar">
+							<f:param value="#{equipe.id}" />
+							<p:commandButton styleClass="btn-acao" type="button" value="#{message['button.editar']}" />
+						</pretty:link>
+						<p:commandButton styleClass="btn-acao" value="#{message['button.desativar']}"	action="#{equipeManager.desativar(equipe.id)}" update="gridEquipes">
+							<p:confirm header="Desativar Cargo"
+								message="Desaja mesmo Desativar?" icon="ui-icon-alert" />
+						</p:commandButton>
+					</p:column>
+				</p:dataTable>
+				<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+					<p:commandButton value="Sim" type="button"
+						styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+					<p:commandButton value="Não" type="button"
+						styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+				</p:confirmDialog>
+				<br />
+				<p:button value="#{message['button.novo']}"
+					outcome="pretty:equipe-incluir" />
+			</h:form>
+		</div>
 	</ui:define>
 </ui:composition>
