Mateus - Refatorado Mascaras

--- a/src/main/webapp/pages/cargaHoraria/cargaHoraria-listar.xhtml
+++ b/src/main/webapp/pages/cargaHoraria/cargaHoraria-listar.xhtml
@@ -18,7 +18,7 @@
 				<p:dataTable id="gridCargaHoraria" var="cargaHoraria" value="#{cargaHorariaManager.listarAtivos()}" emptyMessage="#{message['alerta.listaVazia']}" >
 					<p:column  headerText="#{message['label.cargaHoraria']}" for="cargaHoraria">
 						<h:outputText id="cargaHoraria" value="#{cargaHoraria.cargaHoraria}">
-							<f:converter converterId="moedaConverter"/>
+							<f:converter converterId="cargaHorariaConverter"/>
 						</h:outputText>
 					</p:column>
 					<!-- <p:column headerText="#{message['label.data.inicio']}">
