--- a/src/main/webapp/pages/perfilStefanini/perfilStefanini-listar.xhtml
+++ b/src/main/webapp/pages/perfilStefanini/perfilStefanini-listar.xhtml
@@ -22,7 +22,7 @@
 					
 					<p:column headerText="#{message['label.perfilStefanini.valorInicial']}" >
 						<h:outputText value="#{perfilStefanini.valorInicial}">
-							<f:converter converterId="moedaConverter"/>
+							<f:converter converterId="cargaHorariaConverter"/>
 						</h:outputText>
 					</p:column>
 					
