Mateus - refatorado mascara

--- a/src/main/webapp/pages/perfilStefanini/perfilStefanini-listar.xhtml
+++ b/src/main/webapp/pages/perfilStefanini/perfilStefanini-listar.xhtml
@@ -28,7 +28,7 @@
 					
 					<p:column headerText="#{message['label.perfilStefanini.valorFinal']}" >
 						<h:outputText value="#{perfilStefanini.valorFinal}">
-							<f:converter converterId="moedaConverter"/>
+							<f:converter converterId="cargaHorariaConverter"/>
 						</h:outputText>
 					</p:column>
 					
